--- a/public/views/post.jade
+++ b/public/views/post.jade
@@ -7,6 +7,12 @@ block content
         .col-sm-8
             .panel.panel-default.panel-main
                 #main-body.panel-body
-                    h3 #{post.title}
+                    .media
+                        .media-body
+                            h1 #{post.title}
+                        .media-right
+                            a(href='#')
+                            img.media-object(src='/res/img/brand_logo_new.png', alt='Cipher-com Post Photo')
+                    hr
                     p #{post.description}
         .col-sm-2
