update header with scripts to AJAXSLT js scripts

--- a/public/views/header.jade
+++ b/public/views/header.jade
@@ -7,11 +7,15 @@ html
         link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet', type='text/css')
         link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet', type='text/css')
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
-        link(rel='stylesheet', href='http://localhost/res/css/style.css', media='screen', title='no title', charset='utf-8')
+        link(rel='stylesheet', href='/res/css/style.css', media='screen', title='no title')
         script(src='//code.jquery.com/jquery-1.11.3.min.js', type='text/javascript')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js', type='text/javascript')
-        script(type='text/javascript', src='http://localhost/res/js/lib/xslt2.js')
-        script(type='text/javascript', src='http://localhost/res/js/main.js')
+        script(type='text/javascript', src='/res/js/lib/util.js')
+        script(type='text/javascript', src='/res/js/lib/xmltoken.js')
+        script(type='text/javascript', src='/res/js/lib/dom.js')
+        script(type='text/javascript', src='/res/js/lib/xpath.js')
+        script(type='text/javascript', src='/res/js/lib/xslt.js')
+        script(type='text/javascript', src='/res/js/main.js')
         block head
         title Cipher Com
     body
